# parllel

./: .gitignore  LICENSE.md  README.md  orig.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  spec-file.txt  torch.yml  torch_cuda11.yml  torch_m1.yml
benchmarks/: advantage.py  benchmark_parallelcage.py  benchmark_processcage.py  if_vs_passthru.py  out_arg_logicaland.py  valid.py
benchmarks/halfcheetah/: train_sac_cheetah_parllel.py  train_sac_cheetah_sb3.py
benchmarks/sb3/: README.md  build_parllel_ppo.py  build_parllel_sac.py  build_sb3_ppo.py  build_sb3_sac.py  train_all.sh  train_ppo_cheetah_parllel.py  train_ppo_cheetah_sb3.py  train_ppo_parllel.py  train_ppo_sb3.py  train_sac_cheetah_parllel.py  train_sac_cheetah_sb3.py  train_sac_hopper_parllel.py  train_sac_hopper_sb3.py  train_sac_parllel.py  train_sac_sb3.py  train_sac_walker_parllel.py  train_sac_walker_sb3.py
benchmarks/speed/: benchmark_processcage.py  out_arg_multiply.py
docs/: arrays_and_trees.ipynb  design.md
examples/cartpole/: benchmark_env.py  ppo.yaml  train.py  train_multiagent.py  train_ppo.py  train_ppo.yaml  train_ppo_recurrent.py  train_ppo_wandb.py  train_recurrent.py  train_sac.py  train_sharedmemory.py  train_visual.py
examples/continuous_cartpole/: sweep.bash  train_ppo.py  train_sac.py
examples/frozenlake/: train_ppo.py
examples/pointcloud_rl/: conda.yml  pointcloud.py  train_ppo.py  train_sac.py
examples/visual_cartpole/: show_multiagent_ppo_recurrent.py  train_multiagent_ppo_recurrent.py  train_ppo_recurrent.py
parllel/: __init__.py  algorithm.py  configuration.py  logger.py  logging.py  np_utils.py  patterns.py
parllel/agents/: __init__.py
parllel/arrays/: __init__.py  array.py  indices.py  jagged.py  jagged_list.py  large.py  lazyframes.py  managedmemory.py  replay.py  rotating.py  sharedmemory.py  storage.py  utils.py  view_aware.py
parllel/buffers/: __init__.py  alternating.py  buffer.py  named_tuple.py  pickler.py  pipe.py  reductions.py  registry.py  samples.py  shared_mem.py  sharedmemory.py  utils.py  void.py  weak.py
parllel/cages/: __init__.py  bootstrap.py  cage.py  collections.py  parallel_process.py  process.py  profiler.py  profiling.py  serial.py  synchronized.py  traj_info.py
parllel/callbacks/: __init__.py  callback.py  recording_schedule.py
parllel/dict/: __init__.py  array_dict.py  arraylike.py  utils.py
parllel/envs/: collections.py  gym.py
parllel/handlers/: __init__.py  agent.py  handler.py
parllel/jax/: agent.py  models.py  ppo.py  runner.py  sampler.py  script.py
profiling/: profile_sampling.py
snippets/: pipe_as_queue.py
(+199 files in other folders)
