[metadata]
name = parllel
version = 0.0.1
author = Balazs Gyenes
author_email = balazs.gyenes@kit.edu
description = A flexible RL accelerator framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ipr.kit.edu/sofa-ri/parllel
project_urls =
    Bug Tracker = https://gitlab.ipr.kit.edu/sofa-ri/parllel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = ~=3.9
install_requires = 
    torch
    numpy
    nptyping < 2.0
    numba
    gym
    tqdm

[options.packages.find]
include = parllel*
exclude = parllel.*.tests
