[metadata]
name = parllel
version = 0.0.1
author = Balazs Gyenes
author_email = balazs.gyenes@kit.edu
description = A flexible RL accelerator framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ipr.kit.edu/sofa-ri/parllel
project_urls =
    Bug Tracker = https://gitlab.ipr.kit.edu/sofa-ri/parllel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = ~=3.9
install_requires = 
    torch >= 1.12.0
    numpy >= 1.22.0
    typing-extensions >= 4.1.0
    numba >= 0.56.0
    gymnasium
    tqdm >= 4.60.0
    moviepy >= 1.0

[options.extras_require]
all =
    %(test)s
    %(examples)s
    %(benchmark)s
test = 
    pytest
examples = 
    wandb
    tensorboard
    hydra-core
benchmark =
    stable-baselines3
    gymnasium[mujoco]

[options.packages.find]
include = parllel*
exclude = parllel.*.tests
